--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     </div>
 
     <div class="greetings">
-      <span>T</span>
+      <span>W</span>
       <span>I</span>
-      <span>A</span>
-      <span>R</span>
+      <span>N</span>
       <span>A</span>
     </div>
     <div class="description">
@@ -29,7 +28,7 @@
     </div>
     <div class="button">
         <a href="flower.html">
-          <button class="btn">KLICK DISINI SENG</button>
+          <button class="btn">KLICK DISINI CINTA</button>
       </button>
     </div>
   </body>
