--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </div>
 
     <div class="greetings">
-      <span>W</span>
-      <span>I</span>
-      <span>N</span>
-      <span>A</span>
+      <span>F</span>
+      <span>L</span>
+      <span>O</span>
+      <span>O</span>
     </div>
     <div class="description">
       <span>Aku punya hadiah spesial buat kamu</span>
